force-app/main/default/objects/Star_Wars_character__c/Star_Wars_character__c.object-meta.xml
<CustomObject>
    <label>Star Wars character</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Star Wars characters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>