force-app/main/default/objects/Star_Wars_character__c/fields/Birth_year__c.field-meta.xml
<CustomField>
    <fullName>Birth_year__c</fullName>
    <label>Birth year</label>
    <length>20</length>
    <type>Text</type>
</CustomField>