force-app/main/default/objects/Star_Wars_character__c/fields/Films__c.field-meta.xml
<CustomField>
    <fullName>Films__c</fullName>
    <label>Films</label>
    <length>25</length>
    <type>Text</type>
</CustomField>