force-app/main/default/objects/Star_Wars_character__c/fields/Hair_color__c.field-meta.xml
<CustomField>
    <fullName>Hair_color__c</fullName>
    <label>Hair color</label>
    <length>25</length>
    <type>Text</type>
</CustomField>