force-app/main/default/objects/Star_Wars_character__c/fields/Homeworld__c.field-meta.xml
<CustomField>
    <fullName>Homeworld__c</fullName>
    <label>Homeworld</label>
    <type>Url</type>
</CustomField>