force-app/main/default/objects/Star_Wars_character__c/fields/Skin_color__c.field-meta.xml
<CustomField>
    <fullName>Skin_color__c</fullName>
    <label>Skin color</label>
    <length>25</length>
    <type>Text</type>
</CustomField>